@@ -43,6 +43,8 @@
 * [*] Fix an issue with fullscreen button in reply view clipped by the notch [#23965]
 * [*] Remove "Lazy Images" option that is no longer part of the Jetpack plugin [#23966]
 * [*] Fix an issue with "Speed up your site" section not refreshing (fails silently) [#23966]
+* [**] Enable history navigation (undo and redo) for the experimental editor. [#23961]
+* [*] Avoid unexpectedly marking post content as unsaved. [#23969]
 
 25.6
 -----
